<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="8dp"
    android:paddingStart="8dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/check_all_that_applies"
        android:textSize="20sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkFood"
        android:text="@string/evac" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkWater"
        android:text="@string/foodwater" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkShelter"
        android:text="@string/medical" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkCloth"
        android:text="@string/firstaid" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkBlanket"
        android:text="@string/transport" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkFirstAid"
        android:text="@string/other" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact" />

            <EditText
                android:id="@+id/contact1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact" />

            <EditText
                android:id="@+id/contact2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLines="1" />
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/anything_else" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:minLines="3" />
</LinearLayout>
