<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_user_button"
        style="@style/opensalve_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="loginUser"
        android:text="@string/login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="DEBUG: Use username and password as 'testing' to gain acccess to a volunteer test account."
        android:textColor="@android:color/darker_gray" />
</LinearLayout>