<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.35">

            <ImageView
                android:id="@+id/collection_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/shelter" />

            <FrameLayout
                android:id="@+id/delete_collection_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/rounded_close_button"
                android:visibility="gone"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_action_cancel" />
            </FrameLayout>

            <TextView
                android:id="@+id/collection_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_fake_drop_shadow"
                android:paddingLeft="16dp"
                android:text="@string/name_placeholder"
                android:textColor="@color/textColorOverlay"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/collection_image" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="vertical">

            <TextView
                android:id="@+id/collection_manager"
                style="@style/label"
                android:text="@string/collection_manager" />

            <TextView
                android:id="@+id/collection_contact"
                style="@style/label"
                android:text="@string/contact" />

            <View style="@style/divider_full" />

            <TextView
                style="@style/label"
                android:text="@string/supplies_needed" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/collection_supplies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />

                <LinearLayout
                    android:id="@+id/new_supply_fab_collection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <android.support.design.widget.FloatingActionButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:onClick="openAddNewSupplyDialog"
                        android:src="@drawable/ic_action_add"
                        app:fabSize="mini" />
                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>